--- a/src/views/partials/CustomersList.hbs
+++ b/src/views/partials/CustomersList.hbs
@@ -13,8 +13,8 @@
       <tr>
         <td>{{this.name}}</td>
         <td>{{this.email}}</td>
-        <td><button class="btn btn-primary">Edit</button></td>
-        <td><button class="btn btn-danger">Delete</button></td>
+        <td><a href='/edit/{{ this._id }}' class="btn btn-primary">Edit</a></td>
+        <td><a href="/delete" class="btn btn-danger">Delete</a></td>
       </tr>
       {{/each}}
   </table>
