--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -8,6 +8,7 @@
 </head>
 <body style="background-color: f2f2f2;">
   <div class="container mt-3">
+    <a class="btn btn-primary mb-1" href="/logout">Logout</a>
     <div class="row">
       <div class="col-5">
         {{> CustomerForm }}
